# ParseTrail

./: .env.example.local  .env.example.production  .gitignore  LICENSE  README.md  SECURITY.md  deployment.md  development.md  docker-compose.override.yml  docker-compose.traefik.yml  docker-compose.yml
client/: README.md  build_client_macos.sh  build_client_win64.ps1  build_plugins.ps1  dev_env_macos.yml  dev_env_win64.yml  pyproject.toml
client/assets/: parsetrail.icns
client/migrations/: env.py
client/migrations/versions/: 0001_initial_schema.py  e0ecdd6abcc6_add_budget.py
client/scripts/: build_icns.sh  win64_installer.nsi
client/src/parsetrail/: build_plugins.py  main.py  test_plugins_locally.py  version.py
client/src/parsetrail/core/: api.py  auth.py  categorize.py  client.py  cluster.py  compare_models.py  config.py  crypto.py  initialize.py  interfaces.py  learn.py  logging.py  migrate.py  orm.py  parse.py  plot.py  plugins.py  query.py  reports.py  settings.py  statements.py  utils.py
client/src/parsetrail/gui/: accounts.py  bootstrap.py  budget_view.py  category.py  main_window.py  plugins.py  preferences.py  send.py  statements.py  transactions.py  verification.py
client/src/parsetrail/plugins/: csv_mohela_202411.py  pdf_capitaloneauto_202402.py  pdf_citicc_201505.py  pdf_citicc_202506.py  pdf_citicc_202511.py  pdf_fidelity401k_201810.py  pdf_fidelityhsa_202001.py  pdf_hehsa_201810.py  pdf_lendingclublus_202506.py  pdf_occubank_201409.py  pdf_occucc_201904.py  pdf_synchrony-amzncc_202501.py  pdf_transamerica_202104.py  pdf_usbankreicc_201405.py  (+5 more)
(+64 files in other folders)
